--- a/parquet/Cargo.toml
+++ b/parquet/Cargo.toml
@@ -71,6 +71,7 @@ half = { version = "2.1", default-features = false, features = ["num-traits"] }
 crc32fast = { version = "1.4.2", optional = true, default-features = false }
 simdutf8 = { version = "0.1.5", optional = true, default-features = false }
 ring = { version = "0.17", default-features = false, features = ["std"], optional = true }
+pin-project-lite = { version = "0.2", default-features = false, optional = true }
 
 [dev-dependencies]
 base64 = { version = "0.22", default-features = false, features = ["std"] }
@@ -108,7 +109,7 @@ test_common = ["arrow/test_utils"]
 # Experimental, unstable functionality primarily used for testing
 experimental = []
 # Enable async APIs
-async = ["futures", "tokio"]
+async = ["futures", "tokio", "pin-project-lite"]
 # Enable object_store integration
 object_store = ["dep:object_store", "async"]
 # Group Zstd dependencies
